<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.babygirl.attendance.ui.profile.ProfileFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_attendances"
        android:name="com.babygirl.attendance.ui.attendances.AttendancesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_attendace_for_student" />

    <fragment
        android:id="@+id/navigation_presence_card"
        android:name="com.babygirl.attendance.ui.presence_card.PresenceCardFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_presence_card" />

    <fragment
        android:id="@+id/navigation_course_manager"
        android:name="com.babygirl.attendance.ui.course_manager.CourseManagerFragment"
        android:label="@string/title_course_manager"
        tools:layout="@layout/fragment_course_manager" />

    <fragment
        android:id="@+id/navigation_student_attendances"
        android:name="com.babygirl.attendance.ui.student_attendances.StudentAttendancesFragment"
        android:label="@string/title_student_attendances"
        tools:layout="@layout/fragment_attendace_for_student" />
</navigation>